--- a/Activiteiten.html
+++ b/Activiteiten.html
@@ -14,76 +14,107 @@
   </head>
   <body>
     <header>
-      <img src="Images/nav.png" id="nav-background" />
-      <a href="index.html"
-        ><img src="Images/StudentBuddy_Logo_Wit.png" alt="logo" class="logo"
-      /></a>
-      <i class="bi bi-list"></i>
-      <nav class="hidden">
-        <a href="index.html">Home</a>
-        <a href="StudieTips.html">Studie Tips</a>
-        <a class="current-page" href="Activiteiten.html"
-          >Pauze &#38; Ontspanning</a
-        >
-      </nav>
+      <div class="logo-container">
+        <a href="index.html">
+          <img src="Images/StudentBuddy_Logo_Wit.png" alt="logo" class="logo" />
+        </a>
+      </div>
+      <div class="nav-container">
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="StudieTips.html" data-translate="studyTips">Studie Tips</a>
+          <a
+            class="current-page"
+            href="Activiteiten.html"
+            data-translate="relaxation"
+            >Pauze &#38; Ontspanning</a
+          >
+          <a href="Timer.html" data-translate="timer">Timer</a>
+          <a href="Contact.html" data-translate="contact">Contact</a>
+        </nav>
+      </div>
+      <div class="nav-toggle-container">
+        <button class="lang-switch">NL</button>
+        <i class="bi bi-list"></i>
+      </div>
     </header>
     <main>
-        
-      <h1>Leuke activiteiten om te ontspannen</h1>
+      <h1 data-translate="funActivities">
+        Leuke activiteiten om te ontspannen
+      </h1>
       <article>
-        <h2>Korte wandeling</h2>
-        <p>
+        <h2 data-translate="shortWalk">Korte wandeling</h2>
+        <p data-translate="shortWalkDesc">
           Even de frisse lucht in stappen kan een ontspannende manier zijn om je
           hoofd leeg te maken. Een wandeling van 10 tot 15 minuten helpt je om
           stress los te laten en je beter te voelen.
         </p>
-        <img src="images/wandeling.gif" alt="Korte wandeling GIF" class="activity-gif" />
+        <img
+          src="images/wandeling.gif"
+          alt="Korte wandeling GIF"
+          class="activity-gif"
+        />
       </article>
 
       <article>
-        <h2>Creatief bezig zijn</h2>
-        <p>
+        <h2 data-translate="creative">Creatief bezig zijn</h2>
+        <p data-translate="creativeDesc">
           Tekenen, schilderen, knutselen of zelfs schrijven kan een geweldige
           uitlaatklep zijn voor stress. Het helpt je gedachten te verzetten en
           je creativiteit te stimuleren.
         </p>
-        <img src="images/creatief.gif" alt="Creatief bezig zijn GIF" class="activity-gif" />
+        <img
+          src="images/creatief.gif"
+          alt="Creatief bezig zijn GIF"
+          class="activity-gif"
+        />
       </article>
 
       <article>
-        <h2>Luisteren naar muziek</h2>
-        <p>
+        <h2 data-translate="listenMusic">Luisteren naar muziek</h2>
+        <p data-translate="listenMusicDesc">
           Muziek heeft een grote invloed op onze emoties. Luisteren naar
           rustgevende muziek of je favoriete nummers kan helpen om spanning te
           verminderen en je stemming te verbeteren.
         </p>
-        <img src="images/muziek.gif" alt="Luisteren naar muziek GIF" class="activity-gif" />
+        <img
+          src="images/muziek.gif"
+          alt="Luisteren naar muziek GIF"
+          class="activity-gif"
+        />
       </article>
 
       <article>
-        <h2>Stretching of lichte yoga</h2>
-        <p>
+        <h2 data-translate="stretching">Stretching of lichte yoga</h2>
+        <p data-translate="stretchingDesc">
           Even je lichaam strekken of een paar yoga-oefeningen doen kan helpen
           om vastzittende spanning los te laten. Dit zorgt voor een betere
           doorbloeding en een ontspannen gevoel.
         </p>
-        <img src="images/yoga.gif" alt="Stretching of lichte yoga GIF" class="activity-gif" />
+        <img
+          src="images/yoga.gif"
+          alt="Stretching of lichte yoga GIF"
+          class="activity-gif"
+        />
       </article>
 
       <article>
-        <h2>Hydratatie of snackpauze</h2>
-        <p>
+        <h2 data-translate="hydration">Hydratatie of snackpauze</h2>
+        <p data-translate="hydrationDesc">
           Neem wat water of een gezonde snack om je energie op te laden. Gezonde
           voeding en voldoende hydratatie helpen je lichaam en geest optimaal te
           functioneren.
         </p>
-        <img src="images/snack.gif" alt="Hydratatie of snackpauze GIF" class="activity-gif" />
+        <img
+          src="images/snack.gif"
+          alt="Hydratatie of snackpauze GIF"
+          class="activity-gif"
+        />
       </article>
     </main>
-    </div>
     <footer>
       <div class="top-footer">
-        <p>Volg &#35;UCLL op sociale media:</p>
+        <p data-translate="followUCLL">Volg &#35;UCLL op sociale media:</p>
         <div class="social-media">
           <a href="https://www.youtube.com/user/ucleuvenlimburg" target="_blank"
             ><i class="bi bi-youtube"></i
@@ -109,10 +140,18 @@
       </div>
       <div class="copyright-footer">
         <p>&copy; UCLL &mdash; 2025</p>
-        <a href="#" target="_blank">Cookiebeleid</a>
-        <a href="#" target="_blank">Privacyverklaring</a>
-        <a href="#" target="_blank">Algemene voorwaarden</a>
+        <a href="#" target="_blank" data-translate="cookiePolicy"
+          >Cookiebeleid</a
+        >
+        <a href="#" target="_blank" data-translate="privacyPolicy"
+          >Privacyverklaring</a
+        >
+        <a href="#" target="_blank" data-translate="terms"
+          >Algemene voorwaarden</a
+        >
+      </div>
     </footer>
+    <script src="translations.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
