Adding login system with cache (not secured)

--- a/StudieTips.html
+++ b/StudieTips.html
@@ -36,6 +36,9 @@
         </nav>
       </div>
       <div class="nav-toggle-container">
+        <span class="user-info"
+          ><i class="bi bi-person-circle"></i><span class="username-text"></span
+        ></span>
         <button class="lang-switch">NL</button>
         <i class="bi bi-list"></i>
       </div>
