--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         </nav>
       </div>
       <div class="nav-toggle-container">
+        <span class="user-info"
+          ><i class="bi bi-person-circle"></i><span class="username-text"></span
+        ></span>
         <button class="lang-switch">NL</button>
         <i class="bi bi-list"></i>
       </div>
@@ -75,7 +78,7 @@
           <div class="feature-card">
             <div class="card-header">
               <i class="bi bi-emoji-smile"></i>
-              <h2 data-translate="relaxation">Pauze &#38; Ontspanning</h2>
+              <h2 data-translate="relaxation1">Pauze &#38; Ontspanning</h2>
             </div>
             <div class="card-body">
               <p data-translate="relaxationDesc">
