studie tip toegevoegd

--- a/StudieTips.html
+++ b/StudieTips.html
@@ -110,9 +110,9 @@
           </p>
         </article>
         <article>
-          <h2 data-translate="Food">Gezonde voeding en voldoende water</h2>
+          <h2 data-translate="useFood">Gezonde voeding en voldoende water</h2>
           <img src="images_studietips/food.jpeg" alt="" />
-          <p data-translate="FoodDesc">
+          <p data-translate="useFoodDesc">
             Het kan misschien aantrekkelijk lijken om een maaltijd te maken in de microgolf als je niet veel tijd hebt, maar doe dit
             niet!
             Het is bewezen dat gezond eten ervoor zorgt dat je beter kan studeren.
