links activiteiten pagina

--- a/Activiteiten.html
+++ b/Activiteiten.html
@@ -48,9 +48,11 @@
       <article>
         <h2 data-translate="shortWalk">Korte wandeling</h2>
         <p data-translate="shortWalkDesc">
-          Even de frisse lucht in stappen kan een ontspannende manier zijn om je
-          hoofd leeg te maken. Een wandeling van 10 tot 15 minuten helpt je om
-          stress los te laten en je beter te voelen.
+          Even de frisse lucht in stappen kan een ontspannende manier zijn om je hoofd leeg te maken.
+          Een wandeling van 10 tot 15 minuten helpt je om stress los te laten en je beter te voelen.
+          Op zoek naar inspiratie? Met apps zoals
+          <a href="https://www.komoot.nl" target="_blank" rel="noopener noreferrer"> Komoot </a>
+          kun je snel leuke wandelroutes in jouw omgeving vinden.
         </p>
         <img
           src="images/wandeling.gif"
@@ -62,9 +64,11 @@
       <article>
         <h2 data-translate="creative">Creatief bezig zijn</h2>
         <p data-translate="creativeDesc">
-          Tekenen, schilderen, knutselen of zelfs schrijven kan een geweldige
-          uitlaatklep zijn voor stress. Het helpt je gedachten te verzetten en
-          je creativiteit te stimuleren.
+          Tekenen, schilderen, knutselen of zelfs schrijven kan een geweldige uitlaatklep zijn voor stress.
+          Het helpt je gedachten te verzetten en je creativiteit te stimuleren.
+          Op zoek naar begeleiding of inspiratie? Op
+          <a href="https://www.skillshare.com" target="_blank" rel="noopener noreferrer">Skillshare</a>
+          vind je talloze creatieve cursussen – van illustratie tot creatief schrijven.
         </p>
         <img
           src="images/creatief.gif"
@@ -76,9 +80,13 @@
       <article>
         <h2 data-translate="listenMusic">Luisteren naar muziek</h2>
         <p data-translate="listenMusicDesc">
-          Muziek heeft een grote invloed op onze emoties. Luisteren naar
-          rustgevende muziek of je favoriete nummers kan helpen om spanning te
-          verminderen en je stemming te verbeteren.
+          Muziek heeft een grote invloed op onze emoties.
+          Luisteren naar rustgevende muziek of je favoriete nummers kan helpen om spanning te verminderen en je stemming te
+          verbeteren.
+          Op platforms zoals
+          <a href="https://www.spotify.com/nl/" target="_blank" rel="noopener noreferrer">Spotify</a>
+          vind je talloze playlists die perfect zijn om te ontspannen of je te concentreren tijdens het studeren.
+          Wist je dat Spotify ook een voordelig studentenabonnement aanbiedt?
         </p>
         <img
           src="images/muziek.gif"
@@ -90,9 +98,11 @@
       <article>
         <h2 data-translate="stretching">Stretching of lichte yoga</h2>
         <p data-translate="stretchingDesc">
-          Even je lichaam strekken of een paar yoga-oefeningen doen kan helpen
-          om vastzittende spanning los te laten. Dit zorgt voor een betere
-          doorbloeding en een ontspannen gevoel.
+        Even je lichaam strekken of een paar yoga-oefeningen doen kan helpen om vastzittende spanning los te laten.
+        Dit zorgt voor een betere doorbloeding en een ontspannen gevoel.
+        Op YouTube vind je gratis sessies zoals
+        <a href="https://www.youtube.com/user/yogawithadriene" target="_blank" rel="noopener noreferrer">Yoga with Adriene</a>,
+        ideaal voor korte ontspanningsmomenten tijdens het studeren.
         </p>
         <img
           src="images/yoga.gif"
@@ -104,9 +114,13 @@
       <article>
         <h2 data-translate="hydration">Hydratatie of snackpauze</h2>
         <p data-translate="hydrationDesc">
-          Neem wat water of een gezonde snack om je energie op te laden. Gezonde
-          voeding en voldoende hydratatie helpen je lichaam en geest optimaal te
-          functioneren.
+          Neem wat water of een gezonde snack om je energie op te laden.
+          Gezonde voeding en voldoende hydratatie helpen je lichaam en geest optimaal te functioneren.
+          Inspiratie nodig? Bekijk deze
+          <a href="https://www.studentpool.nl/5-gezonde-snack-recepten/" target="_blank" rel="noopener noreferrer">
+            gezonde snackrecepten voor studenten
+          </a>
+          met onder andere yoghurt met fruit, notenmixen en andere voedzame tussendoortjes.
         </p>
         <img
           src="images/snack.gif"
